# Summer-project

main/: CMakeLists.txt
main/Global_Functions/: Global_Functions.cpp  Global_Functions.h
main/SPI/: SPI-Slave.cpp  SPI-Slave.h  SPI-master.cpp  SPI-master.h
